item slot clickable on border

--- a/Neon.Web/Views/Gameplay/Index.cshtml
+++ b/Neon.Web/Views/Gameplay/Index.cshtml
@@ -24,6 +24,7 @@
             @for (var i = 0; i < 25; i++)
             {
                 <button id="neon-user-equipment-slot-@i" class="neon-item-slot">
+                    <img src="img/item/empty.png" alt="Empty" asp-append-version="true"/>
                 </button>
             }
         </div>
@@ -40,6 +41,7 @@
             @for (var i = 0; i < 100; i++)
             {
                 <button id="neon-user-inventory-slot-@i" class="neon-item-slot">
+                    <img src="img/item/empty.png" alt="Empty" asp-append-version="true" />
                 </button>
             }
         </div>
