--- a/Neon.Web/Views/User/Index.cshtml
+++ b/Neon.Web/Views/User/Index.cshtml
@@ -1,5 +1,9 @@
-﻿@model OpponentModel
+﻿@model UserModel
 
 @{
     Layout = "_Layout";
+    ViewData.Set(new LayoutData
+    {
+        Title = Model.Username,
+    });
 }
