--- a/Neon.Web/wwwroot/scss/site.scss
+++ b/Neon.Web/wwwroot/scss/site.scss
@@ -1,7 +1,7 @@
 ﻿@import "modules/reset.scss";
+@import "modules/theme.scss";
 @import "modules/common.scss";
-@import "modules/palette.scss";
-@import "modules/nav.scss";
-@import "modules/form.scss";
+@import "modules/layout.scss";
 @import "modules/switch.scss";
+@import "modules/form.scss";
 @import "modules/gameplay.scss";
