--- a/Neon.Web/wwwroot/scss/modules/common.scss
+++ b/Neon.Web/wwwroot/scss/modules/common.scss
@@ -1,5 +1,5 @@
-﻿:root {
-	color-scheme: dark light;
+﻿* {
+	scrollbar-width: thin;
 }
 
 body {
@@ -11,7 +11,6 @@ body {
 header, footer {
 	position: sticky;
 	width: 100%;
-	white-space: nowrap;
 	padding: 0.5rem;
 }
 
@@ -29,14 +28,9 @@ main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	align-content: center;
-	justify-items: center;
 	justify-content: center;
 }
 
-input {
-	border: 0;
-	background-color: black;
-	color: #AAAAAA;
+input:not([type]) {
 	outline: none;
 }
