--- a/Neon.Web/wwwroot/scss/modules/gameplay.scss
+++ b/Neon.Web/wwwroot/scss/modules/gameplay.scss
@@ -35,15 +35,20 @@ $item-slot-gap: 4px;
 	justify-content: end;
 }
 
-.neon-user-opponents {
+.neon-user-opponents,
+.neon-user-equipment,
+.neon-user-inventory {
 	min-width: fit-content;
+	display: grid;
+	gap: $item-slot-gap;
+	cursor: pointer;
+}
+
+.neon-user-opponents {
 	max-width: 100%;
 	max-height: 100%;
 	overflow: hidden auto;
-	scrollbar-width: thin;
-	display: grid;
 	grid-template-columns: repeat(auto-fit, $username-width);
-	gap: $item-slot-gap;
 
 	* {
 		width: 100%;
@@ -52,10 +57,7 @@ $item-slot-gap: 4px;
 
 .neon-user-equipment,
 .neon-user-inventory {
-	min-width: fit-content;
-	display: grid;
 	grid-auto-rows: $item-slot-size;
-	gap: $item-slot-gap;
 }
 
 .neon-user-equipment {
@@ -70,20 +72,21 @@ $item-slot-gap: 4px;
 }
 
 .neon-user-messages {
+	width: 0;
+	min-width: 100%;
 	padding: 0;
 	margin: 0;
+	list-style-type: none;
 	overflow: hidden auto;
-	scroll-behavior: smooth;
 	scroll-snap-type: y mandatory;
+	scroll-behavior: smooth;
 
 	li {
-		list-style: none;
 		scroll-snap-align: start;
 	}
 
 	.neon-user-message {
-		--text-color: red;
-		color: var(--text-color);
+		word-wrap: break-word;
 	}
 }
 
@@ -96,11 +99,11 @@ $item-slot-gap: 4px;
 }
 
 .neon-user-inventory {
+	max-width: 100%;
 	max-height: 100%;
 	padding-left: $item-slot-gap * 2;
 	overflow: hidden auto;
-	scrollbar-width: thin;
-	grid-template-columns: repeat(5, $item-slot-size);
+	grid-template-columns: $item-slot-size $item-slot-size repeat(auto-fit, $item-slot-size);
 }
 
 @property --angle {
@@ -127,6 +130,7 @@ $item-slot-gap: 4px;
 	height: $item-slot-size;
 	padding: 0;
 	background-color: transparent;
+	cursor: pointer;
 
 	&:hover {
 		--glow-z-index: 1;
