--- a/Neon.Web/wwwroot/scss/modules/reset.scss
+++ b/Neon.Web/wwwroot/scss/modules/reset.scss
@@ -1,10 +1,10 @@
 ﻿* {
-	box-sizing: border-box;
+	padding: 0;
 	border: 0;
 	margin: 0;
 	border-color: transparent;
 
-	&::before, &::after {
+	&, &::before, &::after {
 		box-sizing: border-box;
 	}
 }
