--- a/Neon.Web/wwwroot/scss/modules/switch.scss
+++ b/Neon.Web/wwwroot/scss/modules/switch.scss
@@ -1,49 +1,48 @@
-﻿@import "palette.scss";
-
-.neon-switch {
-	position: relative;
+﻿.neon-switch {
 	display: inline-block;
+	position: relative;
 	width: 3rem;
 	height: 1.5rem;
+	border-radius: 1.5rem;
+
+	&:focus-within {
+		outline: solid;
+	}
 
 	input {
-		opacity: 0;
 		width: 0;
 		height: 0;
+		opacity: 0;
 
 		&:checked + .neon-slider {
-			background-color: $palette-accent-special;
+			background-color: var(--theme-accent);
 		}
 
-		&:checked + .neon-slider:before {
-			-webkit-transform: translateX(1.5rem);
-			-ms-transform: translateX(1.5rem);
+		&:checked + .neon-slider::before {
 			transform: translateX(1.5rem);
 		}
 	}
 
 	.neon-slider {
 		position: absolute;
-		cursor: pointer;
 		top: 0;
 		left: 0;
 		right: 0;
 		bottom: 0;
-		background-color: $palette-accent-common;
 		border-radius: 1.5rem;
-		-webkit-transition: .25s;
+		cursor: pointer;
+		background-color: var(--theme-common);
 		transition: .25s;
 
-		&:before {
-			position: absolute;
+		&::before {
 			content: "";
+			position: absolute;
 			width: 1rem;
 			height: 1rem;
 			left: 0.25rem;
 			bottom: 0.25rem;
-			background-color: $palette-accent-contrast;
 			border-radius: 50%;
-			-webkit-transition: .25s;
+			background-color: var(--theme-contrast);
 			transition: .25s;
 		}
 	}
