--- a/Neon.Web/Views/Gameplay/Index.cshtml
+++ b/Neon.Web/Views/Gameplay/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "_Layout";
-    ViewData.Set(new LayoutData
+    ViewData.Set(new LayoutViewData
     {
         Title = Resource.Layout_Title_Gameplay,
     });
