--- a/Neon.Web/Views/_ViewImports.cshtml
+++ b/Neon.Web/Views/_ViewImports.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Neon.Web
 @using Neon.Web.Models
-@using Neon.Web.Models.Data
+@using Neon.Web.Resources
+@using Neon.Web.ViewDatas
 @using Neon.Web.Utils
 @using Neon.Web.Utils.Extensions
-@using Neon.Web.Resources
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Neon.Web
