user requests wip

--- a/Neon.Web/Views/Authenticate/Guest.cshtml
+++ b/Neon.Web/Views/Authenticate/Guest.cshtml
@@ -11,7 +11,7 @@
 <form method="post" class="neon-form">
     <field for="Username"/>
     <field for="RememberMe"/>
-    <button type="submit" class="neon-button-accented">@Resource.User_Button_Play</button>
+    <button type="submit" class="neon-button-accent">@Resource.User_Button_Play</button>
 </form>
 
 @section Scripts
