--- a/Neon.Web/Views/Authenticate/Login.cshtml
+++ b/Neon.Web/Views/Authenticate/Login.cshtml
@@ -12,7 +12,7 @@
     <field for="Username"/>
     <field for="Password"/>
     <field for="RememberMe"/>
-    <button type="submit" class="neon-button-accented">@Resource.User_Button_Play</button>
+    <button type="submit" class="neon-button-accent">@Resource.User_Button_Play</button>
 </form>
 
 @section Scripts
