--- a/Neon.Web/Views/Authenticate/Register.cshtml
+++ b/Neon.Web/Views/Authenticate/Register.cshtml
@@ -13,7 +13,7 @@
     <field for="Password"/>
     <field for="RepeatPassword"/>
     <field for="RememberMe"/>
-    <button type="submit" class="neon-button-accented">@Resource.User_Button_Play</button>
+    <button type="submit" class="neon-button-accent">@Resource.User_Button_Play</button>
 </form>
 
 @section Scripts
