--- a/Neon.Web/wwwroot/css/site.css
+++ b/Neon.Web/wwwroot/css/site.css
@@ -54,87 +54,95 @@ p, h1, h2, h3, h4, h5, h6 {
   color: var(--theme-common);
 }
 .neon-theme .neon-theme-back-base-0 {
-  --theme-base-highlighted: color-mix(in srgb, var(--theme-base-0), var(--theme-contrast) 5%);
+  --theme-back-highlighted: color-mix(in srgb, var(--theme-base-0), var(--theme-contrast) 5%);
   background-color: var(--theme-base-0);
 }
 .neon-theme .neon-theme-back-base-1 {
-  --theme-base-highlighted: color-mix(in srgb, var(--theme-base-1), var(--theme-contrast) 5%);
+  --theme-back-highlighted: color-mix(in srgb, var(--theme-base-1), var(--theme-contrast) 5%);
   background-color: var(--theme-base-1);
 }
 .neon-theme .neon-theme-back-base-2 {
-  --theme-base-highlighted: color-mix(in srgb, var(--theme-base-2), var(--theme-contrast) 5%);
+  --theme-back-highlighted: color-mix(in srgb, var(--theme-base-2), var(--theme-contrast) 5%);
   background-color: var(--theme-base-2);
 }
 .neon-theme .neon-theme-back-base-3 {
-  --theme-base-highlighted: color-mix(in srgb, var(--theme-base-3), var(--theme-contrast) 5%);
+  --theme-back-highlighted: color-mix(in srgb, var(--theme-base-3), var(--theme-contrast) 5%);
   background-color: var(--theme-base-3);
 }
 .neon-theme .neon-theme-back-base-4 {
-  --theme-base-highlighted: color-mix(in srgb, var(--theme-base-4), var(--theme-contrast) 5%);
+  --theme-back-highlighted: color-mix(in srgb, var(--theme-base-4), var(--theme-contrast) 5%);
   background-color: var(--theme-base-4);
 }
 .neon-theme .neon-theme-back-base-5 {
-  --theme-base-highlighted: color-mix(in srgb, var(--theme-base-5), var(--theme-contrast) 5%);
+  --theme-back-highlighted: color-mix(in srgb, var(--theme-base-5), var(--theme-contrast) 5%);
   background-color: var(--theme-base-5);
 }
 .neon-theme .neon-theme-back-base-6 {
-  --theme-base-highlighted: color-mix(in srgb, var(--theme-base-6), var(--theme-contrast) 5%);
+  --theme-back-highlighted: color-mix(in srgb, var(--theme-base-6), var(--theme-contrast) 5%);
   background-color: var(--theme-base-6);
 }
 .neon-theme .neon-theme-back-base-7 {
-  --theme-base-highlighted: color-mix(in srgb, var(--theme-base-7), var(--theme-contrast) 5%);
+  --theme-back-highlighted: color-mix(in srgb, var(--theme-base-7), var(--theme-contrast) 5%);
   background-color: var(--theme-base-7);
 }
 .neon-theme .neon-theme-back-base-8 {
-  --theme-base-highlighted: color-mix(in srgb, var(--theme-base-8), var(--theme-contrast) 5%);
+  --theme-back-highlighted: color-mix(in srgb, var(--theme-base-8), var(--theme-contrast) 5%);
   background-color: var(--theme-base-8);
 }
 .neon-theme .neon-theme-back-base-9 {
-  --theme-base-highlighted: color-mix(in srgb, var(--theme-base-9), var(--theme-contrast) 5%);
+  --theme-back-highlighted: color-mix(in srgb, var(--theme-base-9), var(--theme-contrast) 5%);
   background-color: var(--theme-base-9);
 }
-.neon-theme .neon-theme-back-accent, .neon-theme .neon-button-accented {
-  --theme-base-highlighted: color-mix(in srgb, var(--theme-accent), var(--theme-contrast) 25%);
-  background-color: var(--theme-accent);
+.neon-theme .neon-theme-back-common, .neon-theme .neon-button-common {
+  --theme-back-highlighted: color-mix(in srgb, var(--theme-common), var(--theme-contrast) 25%);
+  background-color: var(--theme-common);
 }
 .neon-theme .neon-theme-front-common {
   color: var(--theme-common);
 }
-.neon-theme .neon-theme-front-contrast, .neon-theme .neon-button-accented {
+.neon-theme .neon-theme-back-contrast {
+  --theme-back-highlighted: color-mix(in srgb, var(--theme-contrast), var(--theme-contrast) 25%);
+  background-color: var(--theme-contrast);
+}
+.neon-theme .neon-theme-front-contrast, .neon-theme .neon-button-common, .neon-theme .neon-button-accent {
   color: var(--theme-contrast);
+}
+.neon-theme .neon-theme-back-accent, .neon-theme .neon-button-accent {
+  --theme-back-highlighted: color-mix(in srgb, var(--theme-accent), var(--theme-contrast) 25%);
+  background-color: var(--theme-accent);
 }
 .neon-theme .neon-theme-front-accent {
   color: var(--theme-accent);
 }
 .neon-theme .neon-theme-back-danger {
-  --theme-base-highlighted: color-mix(in srgb, var(--theme-danger), var(--theme-contrast) 25%);
+  --theme-back-highlighted: color-mix(in srgb, var(--theme-danger), var(--theme-contrast) 25%);
   background-color: var(--theme-danger);
 }
 .neon-theme .neon-theme-front-danger {
   color: var(--theme-danger);
 }
 .neon-theme .neon-theme-back-warning {
-  --theme-base-highlighted: color-mix(in srgb, var(--theme-warning), var(--theme-contrast) 25%);
+  --theme-back-highlighted: color-mix(in srgb, var(--theme-warning), var(--theme-contrast) 25%);
   background-color: var(--theme-warning);
 }
 .neon-theme .neon-theme-front-warning {
   color: var(--theme-warning);
 }
 .neon-theme .neon-theme-back-success {
-  --theme-base-highlighted: color-mix(in srgb, var(--theme-success), var(--theme-contrast) 25%);
+  --theme-back-highlighted: color-mix(in srgb, var(--theme-success), var(--theme-contrast) 25%);
   background-color: var(--theme-success);
 }
 .neon-theme .neon-theme-front-success {
   color: var(--theme-success);
 }
-.neon-theme .neon-interactable, .neon-theme .neon-nav-button, .neon-theme .neon-button-accented {
+.neon-theme .neon-interactable, .neon-theme .neon-nav-button, .neon-theme .neon-button-common, .neon-theme .neon-button-accent {
   cursor: pointer;
 }
-.neon-theme .neon-interactable:hover, .neon-theme .neon-nav-button:hover, .neon-theme .neon-button-accented:hover {
-  background-color: var(--theme-base-highlighted);
+.neon-theme .neon-interactable:hover, .neon-theme .neon-nav-button:hover, .neon-theme .neon-button-common:hover, .neon-theme .neon-button-accent:hover {
+  background-color: var(--theme-back-highlighted);
   transition: background-color 0.15s linear;
 }
-.neon-theme .neon-interactable:not(:hover), .neon-theme .neon-nav-button:not(:hover), .neon-theme .neon-button-accented:not(:hover) {
+.neon-theme .neon-interactable:not(:hover), .neon-theme .neon-nav-button:not(:hover), .neon-theme .neon-button-common:not(:hover), .neon-theme .neon-button-accent:not(:hover) {
   transition: background-color 0.15s linear;
 }
 * {
