--- a/Neon.Web/wwwroot/scss/site.scss
+++ b/Neon.Web/wwwroot/scss/site.scss
@@ -4,4 +4,4 @@
 @import "modules/layout.scss";
 @import "modules/switch.scss";
 @import "modules/form.scss";
-@import "modules/gameplay.scss";
+@import "modules/lobby.scss";
