--- a/Neon.Web/wwwroot/css/site.css
+++ b/Neon.Web/wwwroot/css/site.css
@@ -273,7 +273,7 @@ input:not([type]) {
   justify-content: space-between;
 }
 
-.neon-gameplay-container {
+.neon-lobby-container {
   width: 100%;
   height: 100%;
   display: flex;
