--- a/Neon.Web/wwwroot/scss/modules/lobby.scss
+++ b/Neon.Web/wwwroot/scss/modules/lobby.scss
@@ -5,7 +5,7 @@ $item-border-size: 12px;
 $item-slot-size: $item-img-size + $item-border-size;
 $item-slot-gap: 4px;
 
-.neon-gameplay-container {
+.neon-lobby-container {
 	width: 100%;
 	height: 100%;
 	display: flex;
