--- a/Neon.Web/Views/Lobby/Index.cshtml
+++ b/Neon.Web/Views/Lobby/Index.cshtml
@@ -9,12 +9,12 @@
 }
 
 <div class="neon-lobby-container">
-    <div class="neon-user-opponents-container">
-        <div class="neon-user-opponents">
-            @foreach (var opponent in Model.Opponents)
+    <div class="neon-lobby-active-users-container">
+        <div class="neon-lobby-active-users">
+            @foreach (var activeUser in Model.ActiveUsers)
             {
-                <button type="button" class="neon-button-accent" data-username="@opponent.Username">
-                    @opponent.Username
+                <button type="button" class="neon-button-accent" data-username="@activeUser.Username">
+                    @activeUser.Username
                 </button>
             }
         </div>
