--- a/Neon.Web/wwwroot/css/site.css
+++ b/Neon.Web/wwwroot/css/site.css
@@ -281,14 +281,14 @@ input:not([type]) {
   gap: 1ch;
 }
 
-.neon-user-opponents-container,
+.neon-lobby-active-users-container,
 .neon-user-equipment-container,
 .neon-user-inventory-container {
   max-height: 100%;
   display: flex;
 }
 
-.neon-user-opponents-container,
+.neon-lobby-active-users-container,
 .neon-user-inventory-container {
   flex: 1;
 }
@@ -303,7 +303,7 @@ input:not([type]) {
   justify-content: end;
 }
 
-.neon-user-opponents,
+.neon-lobby-active-users,
 .neon-user-equipment,
 .neon-user-inventory {
   min-width: fit-content;
@@ -312,13 +312,13 @@ input:not([type]) {
   cursor: pointer;
 }
 
-.neon-user-opponents {
+.neon-lobby-active-users {
   max-width: 100%;
   max-height: 100%;
   overflow: hidden auto;
   grid-template-columns: repeat(auto-fit, 30ch);
 }
-.neon-user-opponents * {
+.neon-lobby-active-users * {
   width: 100%;
 }
 
