--- a/Neon.Web/wwwroot/scss/modules/lobby.scss
+++ b/Neon.Web/wwwroot/scss/modules/lobby.scss
@@ -13,14 +13,14 @@ $item-slot-gap: 4px;
 	gap: 1ch;
 }
 
-.neon-user-opponents-container,
+.neon-lobby-active-users-container,
 .neon-user-equipment-container,
 .neon-user-inventory-container {
 	max-height: 100%;
 	display: flex;
 }
 
-.neon-user-opponents-container,
+.neon-lobby-active-users-container,
 .neon-user-inventory-container {
 	flex: 1;
 }
@@ -35,7 +35,7 @@ $item-slot-gap: 4px;
 	justify-content: end;
 }
 
-.neon-user-opponents,
+.neon-lobby-active-users,
 .neon-user-equipment,
 .neon-user-inventory {
 	min-width: fit-content;
@@ -44,7 +44,7 @@ $item-slot-gap: 4px;
 	cursor: pointer;
 }
 
-.neon-user-opponents {
+.neon-lobby-active-users {
 	max-width: 100%;
 	max-height: 100%;
 	overflow: hidden auto;
