--- a/Neon.Web/Views/Shared/_Layout.cshtml
+++ b/Neon.Web/Views/Shared/_Layout.cshtml
@@ -7,6 +7,10 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    @if (data.Resource.Count > 0)
+    {
+        <meta name="resource" content='@Json.Serialize(data.Resource)'/>
+    }
     <title>@data.Title | @Resource.Project_Name</title>
     <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400%3B700&display=swap">
